fix overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,6 +36,7 @@
   body {
     @apply bg-background font-body;
     color: #333E48;
+    overflow-x: hidden;
   }
 
   h1,
